# ejemplo_regex_genicam

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
carpeta_datos/: genicam.xml
